BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1351371 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Release 4.1.1 - UNRELEASED
 
     BUGFIXES:
 
+      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)
+
     IMPROVEMENTS:
 
       BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)
