--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)
 
+      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)
+
       bookkeeper-server:
 
         BOOKKEEPER-183: Provide tools to read/check data files in bookie server (sijie via ivank)
