BOOKKEEPER-307: BookieShell introduces 4 findbugs warnings (ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1354326 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-183: Provide tools to read/check data files in bookie server (sijie via ivank)
 
+        BOOKKEEPER-307: BookieShell introduces 4 findbugs warnings (ivank via sijie)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
