BOOKKEEPER-303: LedgerMetadata should serialized using protobufs (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1354492 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-203: improve ledger manager interface to remove zookeeper dependency on metadata operations. (sijie via ivank)
 
+      BOOKKEEPER-303: LedgerMetadata should serialized using protobufs (ivank)
+
   Backward compatible changes:
 
     BUGFIXES:
