BOOKKEEPER-322: New protobufs generates findbugs errors (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1355083 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-307: BookieShell introduces 4 findbugs warnings (ivank via sijie)
 
+        BOOKKEEPER-322: New protobufs generates findbugs errors (ivank)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
