BOOKKEEPER-280: LedgerHandle.addEntry() should return an entryId (mmerli via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1355467 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-322: New protobufs generates findbugs errors (ivank)
 
+        BOOKKEEPER-280: LedgerHandle.addEntry() should return an entryId (mmerli via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
