--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-280: LedgerHandle.addEntry() should return an entryId (mmerli via ivank)
 
+        BOOKKEEPER-324: Flakeyness in LedgerCreateDeleteTest (ivank)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
