--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-324: Flakeyness in LedgerCreateDeleteTest (ivank)
 
+        BOOKKEEPER-318: Spelling mistake in MultiCallback log message. (surendra via sijie)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
