--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -50,6 +50,10 @@ Trunk (unreleased changes)
 
     IMPROVEMENTS:
 
+      bookkeeper-server:
+
+        BOOKKEEPER-328: Bookie DeathWatcher is missing thread name (Rakesh via sijie)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
