BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie) (fix wrong entry in CHANGES.txt)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1362408 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -62,7 +62,7 @@ Trunk (unreleased changes)
 
       hedwig-client:
 
-        BOOKKEEPER-310: Changes in hedwig server to support JMS spec (ivank via sijie)
+        BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
 
 Release 4.1.0 - 2012-06-07
 
