--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -152,6 +152,8 @@ Release 4.1.0 - 2012-06-07
 
         BOOKKEEPER-288: NOTICE files don't have the correct year (ivank via sijie)
 
+	BOOKKEEPER-327: System.currentTimeMillis usage in BookKeeper (uma via fpj)
+
       hedwig-client/
 
         BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)
