BOOKKEEPER-352: Should not use static ServerStats/BKStats instance in TestServerStats/TestBKStats (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1366409 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,7 +10,9 @@ Release 4.1.1 - UNRELEASED
 
     BUGFIXES:
 
-      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)
+      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)Q
+
+      BOOKKEEPER-352: Should not use static ServerStats/BKStats instance in TestServerStats/TestBKStats (sijie via fpj)
 
       bookkeeper-server/
 
