BOOKKEEPER-343: Failed to register hedwig JMX beans in test cases (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1369115 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -56,6 +56,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-330: System.currentTimeMillis usage in Hedwig (uma via sijie)
 
+        BOOKKEEPER-343: Failed to register hedwig JMX beans in test cases (sijie via ivank)
+
     IMPROVEMENTS:
 
       bookkeeper-server:
