BOOKKEEPER-339: Let hedwig cpp client support returning message seq id for publish requests. (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1369767 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,9 +6,15 @@ Trunk (unreleased changes)
 
     IMPROVEMENTS:
 
-      BOOKKEEPER-203: improve ledger manager interface to remove zookeeper dependency on metadata operations. (sijie via ivank)
+      bookkeeper-server:
 
-      BOOKKEEPER-303: LedgerMetadata should serialized using protobufs (ivank)
+        BOOKKEEPER-203: improve ledger manager interface to remove zookeeper dependency on metadata operations. (sijie via ivank)
+
+        BOOKKEEPER-303: LedgerMetadata should serialized using protobufs (ivank)
+
+      hedwig-client:
+
+        BOOKKEEPER-339: Let hedwig cpp client support returning message seq id for publish requests. (sijie via ivank)
 
   Backward compatible changes:
 
