BOOKKEEPER-259: Create a topic manager using versioned write for leader election (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1369778 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -64,6 +64,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-343: Failed to register hedwig JMX beans in test cases (sijie via ivank)
 
+        BOOKKEEPER-259: Create a topic manager using versioned write for leader election (sijie via ivank)
+
     IMPROVEMENTS:
 
       bookkeeper-server:
