BOOKKEEPER-340: Test backward compatibility for hedwig between different versions. (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1369854 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-331: Let hedwig support returning message seq id for publish requests. (Mridul via sijie)
 
+        BOOKKEEPER-340: Test backward compatibility for hedwig between different versions. (sijie via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
