BOOKKEEPER-191: Hub server should change ledger to write, so consumed messages have chance to be garbage collected. (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1371255 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -66,6 +66,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-259: Create a topic manager using versioned write for leader election (sijie via ivank)
 
+        BOOKKEEPER-191: Hub server should change ledger to write, so consumed messages have chance to be garbage collected. (sijie via ivank)
+
     IMPROVEMENTS:
 
       bookkeeper-server:
