BOOKKEEPER-326: DeadLock during ledger recovery (rakeshr via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1372362 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,13 +10,15 @@ Release 4.1.1 - UNRELEASED
 
     BUGFIXES:
 
-      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)Q
+      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)
 
       BOOKKEEPER-352: Should not use static ServerStats/BKStats instance in TestServerStats/TestBKStats (sijie via fpj)
 
       bookkeeper-server/
 
         BOOKKEEPER-294: Not able to start the bookkeeper before the ZK session timeout. (rakeshr via ivank)
+
+        BOOKKEEPER-326: DeadLock during ledger recovery (rakeshr via ivank)
 
       hedwig-server/
 
