BOOKKEEPER-247: Detection of under replication (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1374195 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-246: Recording of underreplication of ledger entries (ivank)
 
+        BOOKKEEPER-247: Detection of under replication (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
