--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -98,6 +98,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-283: Improve Hedwig Console to use Hedwig Metadata Manager. (sijie via ivank)
 
+        BOOKKEEPER-332: Add SubscriptionPreferences to record all preferences for a subscription (sijie via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
