BOOKKEEPER-381: ReadLastConfirmedOp's Logger class name is wrong (surendra via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1377656 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -62,6 +62,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-380: ZkLedgerUnderreplicationManager.markLedgerUnderreplicated() is adding duplicate missingReplicas while multiple bk failed for the same ledger (rakeshr via ivank)
 
+        BOOKKEEPER-381: ReadLastConfirmedOp's Logger class name is wrong (surendra via sijie)
+
       hedwig-client:
 
         BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
