BOOKKEEPER-382: space missed at concatenations in GarbageCollectorThread logging (Brahma via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1377673 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,8 @@ Release 4.1.1 - UNRELEASED
 
         BOOKKEEPER-326: DeadLock during ledger recovery (rakeshr via ivank)
 
+        BOOKKEEPER-382: space missed at concatenations in GarbageCollectorThread logging (Brahma via sijie)
+
       hedwig-server/
 
         BOOKKEEPER-330: System.currentTimeMillis usage in Hedwig (uma via sijie)
