--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,8 @@ Release 4.1.1 - UNRELEASED
 
         BOOKKEEPER-382: space missed at concatenations in GarbageCollectorThread logging (Brahma via sijie)
 
+        BOOKKEEPER-381: ReadLastConfirmedOp's Logger class name is wrong (surendra via sijie)
+
       hedwig-server/
 
         BOOKKEEPER-330: System.currentTimeMillis usage in Hedwig (uma via sijie)
