--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -102,6 +102,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-248: Rereplicating of under replicated data (umamahesh via ivank)
 
+        BOOKKEEPER-304: Prepare bookie vs ledgers cache and will be used by the Auditor (rakeshr via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
