--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -104,6 +104,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-304: Prepare bookie vs ledgers cache and will be used by the Auditor (rakeshr via ivank)
 
+        BOOKKEEPER-272: Provide automatic mechanism to know bookie failures (rakeshr via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
