--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -136,6 +136,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-334: client-side message filter for java client. (sijie via ivank)
 
+        BOOKKEEPER-335: client-side message filter for cpp client. (sijie via ivank)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
