BOOKKEEPER-300: Create Bookie format command (Vinay via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1381870 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -122,6 +122,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-272: Provide automatic mechanism to know bookie failures (rakeshr via ivank)
 
+        BOOKKEEPER-300: Create Bookie format command (Vinay via sijie)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
