BOOKKEEPER-395: HDFS dep transitively depends on a busted pom (Stu Hood via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1381874 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -76,6 +76,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-386: It should not be possible to replicate a ledger fragment which is at the end of an open ledger (ivank & umamahesh via ivank)
 
+        BOOKKEEPER-395: HDFS dep transitively depends on a busted pom (Stu Hood via sijie)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
