BOOKKEEPER-387: BookKeeper Upgrade is not working. (surendra via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1381879 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -78,6 +78,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-395: HDFS dep transitively depends on a busted pom (Stu Hood via sijie)
 
+        BOOKKEEPER-387: BookKeeper Upgrade is not working. (surendra via sijie)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
