BOOKKEEPER-387: BookKeeper Upgrade is not working. (surendra via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1381882 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,8 @@ Release 4.1.1 - UNRELEASED
 
         BOOKKEEPER-381: ReadLastConfirmedOp's Logger class name is wrong (surendra via sijie)
 
+        BOOKKEEPER-387: BookKeeper Upgrade is not working. (surendra via sijie)
+
       hedwig-server/
 
         BOOKKEEPER-330: System.currentTimeMillis usage in Hedwig (uma via sijie)
