--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,6 +34,10 @@ Release 4.1.1 - UNRELEASED
 
       BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)
 
+      bookkeeper-server/
+
+        BOOKKEEPER-296: It's better provide stop script for bookie (nijel via sijie)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
