BOOKKEEPER-372: Check service name in bookie start/stop script. (nijel via sjie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1381888 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -38,6 +38,8 @@ Release 4.1.1 - UNRELEASED
 
         BOOKKEEPER-296: It's better provide stop script for bookie (nijel via sijie)
 
+        BOOKKEEPER-372: Check service name in bookie start/stop script. (nijel via sjie)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
