BOOKKEEPER-329: provide stop scripts for hub server (sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.1@1381890 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -40,6 +40,10 @@ Release 4.1.1 - UNRELEASED
 
         BOOKKEEPER-372: Check service name in bookie start/stop script. (nijel via sjie)
 
+      hedwig-server:
+
+        BOOKKEEPER-329: provide stop scripts for hub server (sijie)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
