--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -40,6 +40,8 @@ Release 4.1.1 - UNRELEASED
 
         BOOKKEEPER-372: Check service name in bookie start/stop script. (nijel via sjie)
 
+        BOOKKEEPER-354: [BOOKKEEPER-296] [Documentation] Modify the bookkeeper start script and document the bookkeeper stop command in bookkeeperConfig.xml (Kiran BC via sijie)
+
       hedwig-server:
 
         BOOKKEEPER-329: provide stop scripts for hub server (sijie)
