BOOKKEEPER-383: NPE in BookieJournalTest  (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1382016 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -80,6 +80,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-387: BookKeeper Upgrade is not working. (surendra via sijie)
 
+        BOOKKEEPER-383: NPE in BookieJournalTest  (sijie via ivank)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
