--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -134,6 +134,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-208: Separate write quorum from ack quorum (ivank)
 
+        BOOKKEEPER-325: Delay the replication of a ledger if RW found that its last fragment is in underReplication. (umamahesh via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
